@@ -28,41 +28,36 @@ public class PostFileService {
             throw new IllegalArgumentException("최대 10개까지 업로드할 수 있습니다.");
         }
 
-        // 🔹 기존 파일 목록 조회 (숨김 여부 상관없이 전체 가져옴)
         List<PostFile> existingFiles = postFileRepository.findByPost(post);
-
-        // 🔹 다시 보이게 할 파일 리스트 (기존에 존재하는데 다시 선택된 파일 → isHide = 'N'으로 변경)
-        List<PostFile> filesToRestore = existingFiles.stream()
-                .filter(file -> fileUrls.contains(file.getFileUrl()) && file.getIsHide() == YN.Y)
-                .toList();
-
-        // 🔹 새로운 파일 리스트 (기존에 없는 파일만 추가)
         List<String> existingFileUrls = existingFiles.stream()
                 .map(PostFile::getFileUrl)
                 .toList();
 
+        List<PostFile> filesToRestore = existingFiles.stream()
+                .filter(file -> fileUrls.contains(file.getFileUrl()) && file.getIsHide().equals("Y"))
+                .toList();
+
         List<PostFile> newFiles = fileUrls.stream()
-                .filter(url -> !existingFileUrls.contains(url)) // 기존에 없는 파일만 추가
+                .filter(url -> !existingFileUrls.contains(url))
                 .map(url -> PostFile.builder()
                         .post(post)
                         .fileUrl(url)
-                        .fileType(getFileType(url)) // 파일 타입 결정
-                        .isHide(YN.N) // 기본값은 보이게 설정
+                        .fileType(getFileType(url))
+                        .isHide("N")
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
-        // ✅ 기존 파일을 다시 선택했으면 복원
         for (PostFile file : filesToRestore) {
             file.restoreFile();
         }
 
-        // ✅ 새 파일 저장
         if (!newFiles.isEmpty()) {
             postFileRepository.saveAll(newFiles);
         }
     }
 
-    private String getFileType(String url) {
+    private String getFileType(String fileUrl) {
+        String url = fileUrl.toLowerCase();
         if (url.endsWith(".jpg") || url.endsWith(".jpeg") || url.endsWith(".png") || url.endsWith(".gif")) {
             return "image";
         } else if (url.endsWith(".mp4") || url.endsWith(".avi") || url.endsWith(".mov")) {
@@ -72,17 +67,32 @@ public class PostFileService {
         }
     }
 
-    // ✅ 기존 파일을 숨김 처리 (isHide = 'Y')
-    public void hidePostFiles(List<String> fileUrls) {
+    // ✅ 기존 파일을 숨김 처리
+    public void hidePostFiles(Long postId, List<String> fileUrls) {
         if (!fileUrls.isEmpty()) {
-            postFileRepository.hideFilesByUrls(fileUrls);
+            postFileRepository.hideFilesByUrls(fileUrls, postId);
         }
     }
 
-    // ✅ 기존 파일을 다시 보이도록 처리 (isHide = 'N')
-    public void restorePostFiles(List<String> fileUrls) {
+    // ✅ 기존 파일을 다시 보이도록 처리
+    public void restorePostFiles(Long postId, List<String> fileUrls) {
         if (!fileUrls.isEmpty()) {
-            postFileRepository.restoreFilesByUrls(fileUrls);
+            postFileRepository.restoreFilesByUrls(fileUrls, postId);
         }
+    }
+
+    public List<PostFile> convertToPostFiles(Post post, List<String> fileUrls) {
+        if (fileUrls == null || fileUrls.isEmpty()) {
+            return new ArrayList<>();
+        }
+
+        return fileUrls.stream()
+                .map(url -> PostFile.builder()
+                        .post(post)
+                        .fileUrl(url)
+                        .fileType(getFileType(url))
+                        .isHide("N")
+                        .build())
+                .toList();
     }
 }
